--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,7 @@ h1 {
 	background-image: url('../img/caption1.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
+	background-position: center;
 }
 
 /*********************************
@@ -148,6 +149,38 @@ h1 {
 	background-image: url('../img/caption6.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
+}
+
+/**************
+** END BLURB **
+***************/
+#end-blurb:after {
+	position: absolute;
+	width: 99%;
+	height: 100%;
+	z-index: 1;
+	opacity:0.6;
+	background-image: url('../img/end.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.profile-row {
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
+.profile {
+	text-align: center;
+}
+
+.profile-info {
+	line-height: 0.75;
+	padding-top: 10px;
+}
+
+.end-text {
+	font-size: 20px;
 }
 
 /******************************************
