--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ h1 {
 	width: 99%;
 	height: 100%;
 	z-index: 1;
-	opacity: 0.6;
+	opacity: 1;
 	background-image: url('../img/banner.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -181,6 +181,56 @@ h1 {
 
 .end-text {
 	font-size: 20px;
+}
+
+/********************
+** STORYLINE POPUP **
+********************/
+
+.student {
+	background-color: #A51C30; /* Harvard Crimson */
+	display: block;
+	padding: 10px;
+	z-index: 2;
+
+	width: 50%;
+	position: absolute;
+	bottom: 20px;
+	right: 20px;
+}
+
+.student-intro {
+	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.student:hover {
+	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.student img {
+	float: left;
+	margin-right: 10px;
+}
+
+.student p {
+	margin: 0;
+	padding-left: 160px;
+	padding-right: 25px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	text-align: left;
+
+	font-family: 'Russo One', sans-serif;
+	font-size: 12px;
+	color: white;
+}
+
+#close {
+	float: right;
+	display: inline-block;
+	padding: 2px 5px;
+
+	background: white;
 }
 
 /******************************************
@@ -391,29 +441,6 @@ input[type=submit] {
 #network-selector {
 	font-size: 20px;
 	margin:auto;
-}
-
-.text-student {
-	width:50%;
-	position: absolute;
-	background-color: rgba(255, 0, 0, 0.8);
-	color: white;
-	padding: 20px;
-	font-size: 12px;
-	bottom: 20px;
-	right: 20px;
-}
-
-.image-student {
-	position: absolute;
-	bottom: 20px;
-	right: 50%;
-}
-
-.button-student {
-	position: absolute;
-	bottom: 20px;
-	right: 20px;
 }
 
 #network-graph-wrapper {
